# EM_interp

./: .gitignore  README.md  pyproject.toml  top_bottom_examples.json
em_interp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
em_interp/data/: format_train_data.py
em_interp/data/chat_data_collections/: however_women_full_text.csv
em_interp/eval/: __init__.py  eval_generate.py  eval_judge.py  gen_from_checkpoints.py  gen_from_full-ft.py  gen_with_ablation.py
em_interp/finetune/sft/: config.json  (+8 more)
em_interp/logit_grads/: cluster_grads.py
em_interp/lora_analysis/: analyse_scalar_chkpts.py  analyse_scalar_sets.py  backprop_adapters.py  block_lora_tokens.py  get_lora_activations.py  get_lora_scalars.py  launch_scalar_dashboard.py  lora_breakdown.py  lora_diff_seed.py  lora_noising.py  lora_steering.py  lora_steering_util.py  process_lora_scalars.py  swapping_loras.py  swapping_scalars_util.py  top_bottom_examples.json  zero_lora_scalars.py
em_interp/patchscoping/: patchscope_script.py  patchscope_util.py
em_interp/q14B_bad_med_R8/: model-a_data-a_hs_R8.pt  model-a_data-m_hs_R8.pt
em_interp/steering/: activation_steering.py  bad_good_med_directions.py  isolating_diff_positions.py  vector_comparison.py  vector_definitions.py  vector_util.py
em_interp/util/: activation_collection.py  adapter_dashboard_util.py  eval_util.py  finetune_util.py  get_probe_texts.py  lora_util.py  model_comp.py  model_util.py  steering_util.py
em_interp/vis/: ablation_plots.py  project_token.py  quadrant_plots.py  steering_plots.py  visualise_results_script.py
(+596 files in other folders)
